# clinic-platform

./: .gitignore  CLAUDE.md  MVP.md  README.md  pyproject.toml
.frontend/: package.json  pnpm-lock.yaml
.frontend/src/app/: globals.css  layout.tsx  page.tsx
.frontend/src/components/: Chat.tsx  Sidebar.tsx
.frontend/src/lib/: api.ts  formatters.ts  types.ts
.frontend/tests/e2e/: coach-platform.spec.ts
.src/clinic/: __init__.py  __main__.py  api.py  apple_health.py  calendar.py  chat.py  compound_db.py  config.py  database.py  hevy.py  ingest.py  loaders.py  mock_data.py  onboarding.py  operations.py  pk_model.py  storage.py  triggers.py
.src/clinic/detectors/: themes.py
.src/clinic/extraction/: extractor.py  loinc.py  reference_data.py  schema.py  validator.py
.src/clinic/integrations/: base.py  google_calendar.py  whoop.py
.src/clinic/llm/: context.py  engine.py  tools.py
.src/coach/: __init__.py  __main__.py  api.py  bp_entry.py  calendar.py  chat.py  config.py  cycle_log.py  database.py  hevy.py  ingest.py  loaders.py  mock_data.py  operations.py  pk_model.py  storage.py  triggers.py
.src/coach/detectors/: framework.py  themes.py
.src/coach/llm/: engine.py  (+2 more)
wiki/: principles.md
wiki/architecture/: coach-read-layer.md  commit-model.md  hevy-integration.md  interaction-model.md  llm-native-interaction.md  relationship-to-cde.md  reuse-from-cde.md  two-sided-model.md
wiki/legal/: duty-to-monitor.md  regulatory-landscape.md
wiki/ops/: athlete-intake.md  customer-discovery.md  market.md  mvp-plan.md
wiki/product/: buyer.md  moat.md  thesis.md
(+28 files in other folders)
