[project]
name = "coach-platform"
version = "0.1.0"
description = "Coach Platform — domain-aware client data consolidation for physique coaches"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".src"]

[tool.pytest.ini_options]
testpaths = [".tests"]
asyncio_mode = "auto"
